[tool.poetry]
name = "ark-invest-api"
version = "2.5.0"
description = "API for tracking holdings and trades of ARK Invest funds."
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.9.0.post0"
SQLAlchemy = "^2.0.30"
uvicorn = "^0.29.0"
yahooquery = "^2.3.7"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
