[tool.poetry]
name = "ark-invest-api"
version = "2.6.2"
description = "API for tracking holdings and trades of ARK Invest funds."
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.4"
requests = "^2.32.5"
psycopg2-binary = "^2.9.11"
python-dateutil = "^2.9.0.post0"
SQLAlchemy = "^2.0.44"
uvicorn = "^0.38.0"
yahooquery = "^2.4.1"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
pytest = "^8.4.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
